php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #61443 Since upgrade to PHP 5.4, we can't change zlib.output_compression on the fly.
Submitted: 2012-03-19 19:48 UTC Modified: 2012-04-24 18:44 UTC
Votes:2
Avg. Score:5.0 ± 0.0
Reproduced:2 of 2 (100.0%)
Same Version:2 (100.0%)
Same OS:2 (100.0%)
From: debian at ange7 dot com Assigned: mike (profile)
Status: Closed Package: Zlib related
PHP Version: 5.4.0 OS: Debian Sid
Private report: No CVE-ID: None
 [2012-03-19 19:48 UTC] debian at ange7 dot com
Description:
------------
Package: php5
Version: 5.4.0-2
Severity: important

Since upgrade to PHP 5.4, we can't change zlib.output_compression on the 
fly.

Test script:
---------------
<?php
if (!headers_sent())
    ini_set('zlib.output_compression', true);
echo 'end';
?>

Expected result:
----------------
end

Actual result:
--------------
Warning: ini_set(): Cannot enable zlib.output_compression - there has 
already been output in /home/alex/workspace/test/www/nouveauScript.php 
on line 3
end

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2012-03-19 21:32 UTC] mike@php.net
Cannot reproduce. Are you sure about your reproduce script?
 [2012-03-19 21:32 UTC] mike@php.net
-Status: Open +Status: Feedback -Assigned To: +Assigned To: mike
 [2012-03-19 21:36 UTC] mike@php.net
-Package: PHP options/info functions +Package: Zlib related
 [2012-03-20 10:07 UTC] debian at ange7 dot com
code to reproduce :

<?php 
ob_start(); echo "foo\n"; ob_get_clean(); 
if(!headers_sent()) ini_set('zlib.output_compression', true); echo "end\n";
 [2012-03-20 10:07 UTC] debian at ange7 dot com
-Status: Feedback +Status: Assigned
 [2012-04-24 18:37 UTC] mike@php.net
Automatic comment on behalf of mike
Revision: http://git.php.net/?p=php-src.git;a=commit;h=7c93a16477d7e4d6e0386d0613558360f036d57b
Log: fix bug #61443
 [2012-04-24 18:44 UTC] mike@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.

 For Windows:

http://windows.php.net/snapshots/
 
Thank you for the report, and for helping us make PHP better.


 [2012-04-24 18:44 UTC] mike@php.net
-Status: Assigned +Status: Closed
 [2014-10-07 23:26 UTC] stas@php.net
Automatic comment on behalf of mike
Revision: http://git.php.net/?p=php-src-security.git;a=commit;h=7c93a16477d7e4d6e0386d0613558360f036d57b
Log: fix bug #61443
 [2014-10-07 23:37 UTC] stas@php.net
Automatic comment on behalf of mike
Revision: http://git.php.net/?p=php-src-security.git;a=commit;h=7c93a16477d7e4d6e0386d0613558360f036d57b
Log: fix bug #61443
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 15 08:00:02 2026 UTC