fix bug #61443

Since upgrade to PHP 5.4, we can't change zlib.output_compression on the
fly

the check for PHP_OUTPUT_WRITTEN was over-zealous